// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox multiple renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="usd1-react-ui-checkbox-wrapper"
      >
        <div
          class="usd1-react-ui-checkbox-inner"
        >
          <div
            class="usd1-react-ui-checkbox-inner-checkbox p-checkbox p-component"
            data-p-disabled="false"
            data-p-highlight="false"
            data-pc-name="checkbox"
            data-pc-section="root"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              id="Cheese"
              name="C"
              type="checkbox"
            />
            <div
              class="p-checkbox-box"
              data-p-disabled="false"
              data-p-highlight="false"
              data-pc-section="box"
            />
          </div>
          <label
            for="Cheese"
          >
            Cheese
          </label>
        </div>
        <div
          class="usd1-react-ui-checkbox-inner"
        >
          <div
            class="usd1-react-ui-checkbox-inner-checkbox p-checkbox p-component p-highlight"
            data-p-disabled="false"
            data-p-highlight="true"
            data-pc-name="checkbox"
            data-pc-section="root"
          >
            <input
              aria-invalid="false"
              checked=""
              class="p-checkbox-input"
              data-pc-section="input"
              id="Mushroom"
              name="M"
              type="checkbox"
            />
            <div
              class="p-checkbox-box"
              data-p-disabled="false"
              data-p-highlight="true"
              data-pc-section="box"
            >
              <svg
                class="p-icon p-checkbox-icon"
                data-pc-section="icon"
                fill="none"
                height="14"
                viewBox="0 0 14 14"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4.86199 11.5948C4.78717 11.5923 4.71366 11.5745 4.64596 11.5426C4.57826 11.5107 4.51779 11.4652 4.46827 11.4091L0.753985 7.69483C0.683167 7.64891 0.623706 7.58751 0.580092 7.51525C0.536478 7.44299 0.509851 7.36177 0.502221 7.27771C0.49459 7.19366 0.506156 7.10897 0.536046 7.03004C0.565935 6.95111 0.613367 6.88 0.674759 6.82208C0.736151 6.76416 0.8099 6.72095 0.890436 6.69571C0.970973 6.67046 1.05619 6.66385 1.13966 6.67635C1.22313 6.68886 1.30266 6.72017 1.37226 6.76792C1.44186 6.81567 1.4997 6.8786 1.54141 6.95197L4.86199 10.2503L12.6397 2.49483C12.7444 2.42694 12.8689 2.39617 12.9932 2.40745C13.1174 2.41873 13.2343 2.47141 13.3251 2.55705C13.4159 2.64268 13.4753 2.75632 13.4938 2.87973C13.5123 3.00315 13.4888 3.1292 13.4271 3.23768L5.2557 11.4091C5.20618 11.4652 5.14571 11.5107 5.07801 11.5426C5.01031 11.5745 4.9368 11.5923 4.86199 11.5948Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
          <label
            for="Mushroom"
          >
            Mushroom
          </label>
        </div>
        <div
          class="usd1-react-ui-checkbox-inner"
        >
          <div
            class="usd1-react-ui-checkbox-inner-checkbox p-checkbox p-component"
            data-p-disabled="false"
            data-p-highlight="false"
            data-pc-name="checkbox"
            data-pc-section="root"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              id="Pepper"
              name="P"
              type="checkbox"
            />
            <div
              class="p-checkbox-box"
              data-p-disabled="false"
              data-p-highlight="false"
              data-pc-section="box"
            />
          </div>
          <label
            for="Pepper"
          >
            Pepper
          </label>
        </div>
        <div
          class="usd1-react-ui-checkbox-inner"
        >
          <div
            class="usd1-react-ui-checkbox-inner-checkbox p-checkbox p-component"
            data-p-disabled="false"
            data-p-highlight="false"
            data-pc-name="checkbox"
            data-pc-section="root"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              id="Onion"
              name="O"
              type="checkbox"
            />
            <div
              class="p-checkbox-box"
              data-p-disabled="false"
              data-p-highlight="false"
              data-pc-section="box"
            />
          </div>
          <label
            for="Onion"
          >
            Onion
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="usd1-react-ui-checkbox-wrapper"
    >
      <div
        class="usd1-react-ui-checkbox-inner"
      >
        <div
          class="usd1-react-ui-checkbox-inner-checkbox p-checkbox p-component"
          data-p-disabled="false"
          data-p-highlight="false"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-invalid="false"
            class="p-checkbox-input"
            data-pc-section="input"
            id="Cheese"
            name="C"
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-disabled="false"
            data-p-highlight="false"
            data-pc-section="box"
          />
        </div>
        <label
          for="Cheese"
        >
          Cheese
        </label>
      </div>
      <div
        class="usd1-react-ui-checkbox-inner"
      >
        <div
          class="usd1-react-ui-checkbox-inner-checkbox p-checkbox p-component p-highlight"
          data-p-disabled="false"
          data-p-highlight="true"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-invalid="false"
            checked=""
            class="p-checkbox-input"
            data-pc-section="input"
            id="Mushroom"
            name="M"
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-disabled="false"
            data-p-highlight="true"
            data-pc-section="box"
          >
            <svg
              class="p-icon p-checkbox-icon"
              data-pc-section="icon"
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.86199 11.5948C4.78717 11.5923 4.71366 11.5745 4.64596 11.5426C4.57826 11.5107 4.51779 11.4652 4.46827 11.4091L0.753985 7.69483C0.683167 7.64891 0.623706 7.58751 0.580092 7.51525C0.536478 7.44299 0.509851 7.36177 0.502221 7.27771C0.49459 7.19366 0.506156 7.10897 0.536046 7.03004C0.565935 6.95111 0.613367 6.88 0.674759 6.82208C0.736151 6.76416 0.8099 6.72095 0.890436 6.69571C0.970973 6.67046 1.05619 6.66385 1.13966 6.67635C1.22313 6.68886 1.30266 6.72017 1.37226 6.76792C1.44186 6.81567 1.4997 6.8786 1.54141 6.95197L4.86199 10.2503L12.6397 2.49483C12.7444 2.42694 12.8689 2.39617 12.9932 2.40745C13.1174 2.41873 13.2343 2.47141 13.3251 2.55705C13.4159 2.64268 13.4753 2.75632 13.4938 2.87973C13.5123 3.00315 13.4888 3.1292 13.4271 3.23768L5.2557 11.4091C5.20618 11.4652 5.14571 11.5107 5.07801 11.5426C5.01031 11.5745 4.9368 11.5923 4.86199 11.5948Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <label
          for="Mushroom"
        >
          Mushroom
        </label>
      </div>
      <div
        class="usd1-react-ui-checkbox-inner"
      >
        <div
          class="usd1-react-ui-checkbox-inner-checkbox p-checkbox p-component"
          data-p-disabled="false"
          data-p-highlight="false"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-invalid="false"
            class="p-checkbox-input"
            data-pc-section="input"
            id="Pepper"
            name="P"
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-disabled="false"
            data-p-highlight="false"
            data-pc-section="box"
          />
        </div>
        <label
          for="Pepper"
        >
          Pepper
        </label>
      </div>
      <div
        class="usd1-react-ui-checkbox-inner"
      >
        <div
          class="usd1-react-ui-checkbox-inner-checkbox p-checkbox p-component"
          data-p-disabled="false"
          data-p-highlight="false"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-invalid="false"
            class="p-checkbox-input"
            data-pc-section="input"
            id="Onion"
            name="O"
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-disabled="false"
            data-p-highlight="false"
            data-pc-section="box"
          />
        </div>
        <label
          for="Onion"
        >
          Onion
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Checkbox multipleTristate renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="usd1-react-ui-checkbox-wrapper"
      >
        <div
          class="usd1-react-ui-checkbox-inner"
        >
          <div
            class="usd1-react-ui-checkbox-inner-checkbox p-tristatecheckbox p-checkbox p-component"
            data-p-disabled="false"
            data-pc-name="tristatecheckbox"
            data-pc-section="root"
            id="Audi"
            inputid="Audi"
            name="A"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              id="Audi"
              type="checkbox"
              value=""
            />
            <span
              aria-live="polite"
              class="p-hidden-accessible"
              data-pc-section="sronlyaria"
            >
              Not Selected
            </span>
            <div
              aria-checked="false"
              class="p-checkbox-box"
              data-pc-section="box"
              role="checkbox"
              tabindex="0"
            />
          </div>
          <label
            for="Audi"
          >
            Audi
          </label>
        </div>
        <div
          class="usd1-react-ui-checkbox-inner"
        >
          <div
            class="usd1-react-ui-checkbox-inner-checkbox p-tristatecheckbox p-checkbox p-component"
            data-p-disabled="false"
            data-pc-name="tristatecheckbox"
            data-pc-section="root"
            id="BWM"
            inputid="BWM"
            name="B"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              id="BWM"
              type="checkbox"
              value=""
            />
            <span
              aria-live="polite"
              class="p-hidden-accessible"
              data-pc-section="sronlyaria"
            >
              Not Selected
            </span>
            <div
              aria-checked="false"
              class="p-checkbox-box"
              data-pc-section="box"
              role="checkbox"
              tabindex="0"
            />
          </div>
          <label
            for="BWM"
          >
            BWM
          </label>
        </div>
        <div
          class="usd1-react-ui-checkbox-inner"
        >
          <div
            class="usd1-react-ui-checkbox-inner-checkbox p-tristatecheckbox p-checkbox p-component p-highlight"
            data-p-disabled="false"
            data-pc-name="tristatecheckbox"
            data-pc-section="root"
            id="Benz"
            inputid="Benz"
            name="B"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              id="Benz"
              type="checkbox"
              value="true"
            />
            <span
              aria-live="polite"
              class="p-hidden-accessible"
              data-pc-section="sronlyaria"
            >
              True
            </span>
            <div
              aria-checked="true"
              class="p-checkbox-box"
              data-pc-section="box"
              role="checkbox"
              tabindex="0"
            >
              <svg
                class="p-icon p-checkbox-icon p-c"
                data-pc-section="checkicon"
                fill="none"
                height="14"
                viewBox="0 0 14 14"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4.86199 11.5948C4.78717 11.5923 4.71366 11.5745 4.64596 11.5426C4.57826 11.5107 4.51779 11.4652 4.46827 11.4091L0.753985 7.69483C0.683167 7.64891 0.623706 7.58751 0.580092 7.51525C0.536478 7.44299 0.509851 7.36177 0.502221 7.27771C0.49459 7.19366 0.506156 7.10897 0.536046 7.03004C0.565935 6.95111 0.613367 6.88 0.674759 6.82208C0.736151 6.76416 0.8099 6.72095 0.890436 6.69571C0.970973 6.67046 1.05619 6.66385 1.13966 6.67635C1.22313 6.68886 1.30266 6.72017 1.37226 6.76792C1.44186 6.81567 1.4997 6.8786 1.54141 6.95197L4.86199 10.2503L12.6397 2.49483C12.7444 2.42694 12.8689 2.39617 12.9932 2.40745C13.1174 2.41873 13.2343 2.47141 13.3251 2.55705C13.4159 2.64268 13.4753 2.75632 13.4938 2.87973C13.5123 3.00315 13.4888 3.1292 13.4271 3.23768L5.2557 11.4091C5.20618 11.4652 5.14571 11.5107 5.07801 11.5426C5.01031 11.5745 4.9368 11.5923 4.86199 11.5948Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
          <label
            for="Benz"
          >
            Mercedes-Benz
          </label>
        </div>
        <div
          class="usd1-react-ui-checkbox-inner"
        >
          <div
            class="usd1-react-ui-checkbox-inner-checkbox p-tristatecheckbox p-checkbox p-component"
            data-p-disabled="false"
            data-pc-name="tristatecheckbox"
            data-pc-section="root"
            id="Lexus"
            inputid="Lexus"
            name="L"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              id="Lexus"
              type="checkbox"
              value=""
            />
            <span
              aria-live="polite"
              class="p-hidden-accessible"
              data-pc-section="sronlyaria"
            >
              Not Selected
            </span>
            <div
              aria-checked="false"
              class="p-checkbox-box"
              data-pc-section="box"
              role="checkbox"
              tabindex="0"
            />
          </div>
          <label
            for="Lexus"
          >
            Lexus
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="usd1-react-ui-checkbox-wrapper"
    >
      <div
        class="usd1-react-ui-checkbox-inner"
      >
        <div
          class="usd1-react-ui-checkbox-inner-checkbox p-tristatecheckbox p-checkbox p-component"
          data-p-disabled="false"
          data-pc-name="tristatecheckbox"
          data-pc-section="root"
          id="Audi"
          inputid="Audi"
          name="A"
        >
          <input
            aria-invalid="false"
            class="p-checkbox-input"
            data-pc-section="input"
            id="Audi"
            type="checkbox"
            value=""
          />
          <span
            aria-live="polite"
            class="p-hidden-accessible"
            data-pc-section="sronlyaria"
          >
            Not Selected
          </span>
          <div
            aria-checked="false"
            class="p-checkbox-box"
            data-pc-section="box"
            role="checkbox"
            tabindex="0"
          />
        </div>
        <label
          for="Audi"
        >
          Audi
        </label>
      </div>
      <div
        class="usd1-react-ui-checkbox-inner"
      >
        <div
          class="usd1-react-ui-checkbox-inner-checkbox p-tristatecheckbox p-checkbox p-component"
          data-p-disabled="false"
          data-pc-name="tristatecheckbox"
          data-pc-section="root"
          id="BWM"
          inputid="BWM"
          name="B"
        >
          <input
            aria-invalid="false"
            class="p-checkbox-input"
            data-pc-section="input"
            id="BWM"
            type="checkbox"
            value=""
          />
          <span
            aria-live="polite"
            class="p-hidden-accessible"
            data-pc-section="sronlyaria"
          >
            Not Selected
          </span>
          <div
            aria-checked="false"
            class="p-checkbox-box"
            data-pc-section="box"
            role="checkbox"
            tabindex="0"
          />
        </div>
        <label
          for="BWM"
        >
          BWM
        </label>
      </div>
      <div
        class="usd1-react-ui-checkbox-inner"
      >
        <div
          class="usd1-react-ui-checkbox-inner-checkbox p-tristatecheckbox p-checkbox p-component p-highlight"
          data-p-disabled="false"
          data-pc-name="tristatecheckbox"
          data-pc-section="root"
          id="Benz"
          inputid="Benz"
          name="B"
        >
          <input
            aria-invalid="false"
            class="p-checkbox-input"
            data-pc-section="input"
            id="Benz"
            type="checkbox"
            value="true"
          />
          <span
            aria-live="polite"
            class="p-hidden-accessible"
            data-pc-section="sronlyaria"
          >
            True
          </span>
          <div
            aria-checked="true"
            class="p-checkbox-box"
            data-pc-section="box"
            role="checkbox"
            tabindex="0"
          >
            <svg
              class="p-icon p-checkbox-icon p-c"
              data-pc-section="checkicon"
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.86199 11.5948C4.78717 11.5923 4.71366 11.5745 4.64596 11.5426C4.57826 11.5107 4.51779 11.4652 4.46827 11.4091L0.753985 7.69483C0.683167 7.64891 0.623706 7.58751 0.580092 7.51525C0.536478 7.44299 0.509851 7.36177 0.502221 7.27771C0.49459 7.19366 0.506156 7.10897 0.536046 7.03004C0.565935 6.95111 0.613367 6.88 0.674759 6.82208C0.736151 6.76416 0.8099 6.72095 0.890436 6.69571C0.970973 6.67046 1.05619 6.66385 1.13966 6.67635C1.22313 6.68886 1.30266 6.72017 1.37226 6.76792C1.44186 6.81567 1.4997 6.8786 1.54141 6.95197L4.86199 10.2503L12.6397 2.49483C12.7444 2.42694 12.8689 2.39617 12.9932 2.40745C13.1174 2.41873 13.2343 2.47141 13.3251 2.55705C13.4159 2.64268 13.4753 2.75632 13.4938 2.87973C13.5123 3.00315 13.4888 3.1292 13.4271 3.23768L5.2557 11.4091C5.20618 11.4652 5.14571 11.5107 5.07801 11.5426C5.01031 11.5745 4.9368 11.5923 4.86199 11.5948Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <label
          for="Benz"
        >
          Mercedes-Benz
        </label>
      </div>
      <div
        class="usd1-react-ui-checkbox-inner"
      >
        <div
          class="usd1-react-ui-checkbox-inner-checkbox p-tristatecheckbox p-checkbox p-component"
          data-p-disabled="false"
          data-pc-name="tristatecheckbox"
          data-pc-section="root"
          id="Lexus"
          inputid="Lexus"
          name="L"
        >
          <input
            aria-invalid="false"
            class="p-checkbox-input"
            data-pc-section="input"
            id="Lexus"
            type="checkbox"
            value=""
          />
          <span
            aria-live="polite"
            class="p-hidden-accessible"
            data-pc-section="sronlyaria"
          >
            Not Selected
          </span>
          <div
            aria-checked="false"
            class="p-checkbox-box"
            data-pc-section="box"
            role="checkbox"
            tabindex="0"
          />
        </div>
        <label
          for="Lexus"
        >
          Lexus
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Checkbox single renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="usd1-react-ui-checkbox-wrapper"
      >
        <div
          class="usd1-react-ui-checkbox-inner"
        >
          <div
            class="usd1-react-ui-checkbox-inner-checkbox p-checkbox p-component p-highlight"
            data-p-disabled="false"
            data-p-highlight="true"
            data-pc-name="checkbox"
            data-pc-section="root"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              id="Agree"
              name="Agree"
              type="checkbox"
            />
            <div
              class="p-checkbox-box"
              data-p-disabled="false"
              data-p-highlight="true"
              data-pc-section="box"
            >
              <svg
                class="p-icon p-checkbox-icon"
                data-pc-section="icon"
                fill="none"
                height="14"
                viewBox="0 0 14 14"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4.86199 11.5948C4.78717 11.5923 4.71366 11.5745 4.64596 11.5426C4.57826 11.5107 4.51779 11.4652 4.46827 11.4091L0.753985 7.69483C0.683167 7.64891 0.623706 7.58751 0.580092 7.51525C0.536478 7.44299 0.509851 7.36177 0.502221 7.27771C0.49459 7.19366 0.506156 7.10897 0.536046 7.03004C0.565935 6.95111 0.613367 6.88 0.674759 6.82208C0.736151 6.76416 0.8099 6.72095 0.890436 6.69571C0.970973 6.67046 1.05619 6.66385 1.13966 6.67635C1.22313 6.68886 1.30266 6.72017 1.37226 6.76792C1.44186 6.81567 1.4997 6.8786 1.54141 6.95197L4.86199 10.2503L12.6397 2.49483C12.7444 2.42694 12.8689 2.39617 12.9932 2.40745C13.1174 2.41873 13.2343 2.47141 13.3251 2.55705C13.4159 2.64268 13.4753 2.75632 13.4938 2.87973C13.5123 3.00315 13.4888 3.1292 13.4271 3.23768L5.2557 11.4091C5.20618 11.4652 5.14571 11.5107 5.07801 11.5426C5.01031 11.5745 4.9368 11.5923 4.86199 11.5948Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
          <label
            for="Agree"
          >
            I am over 18 years old and I have read, understand and agree to the
            <a
              href="https://github.com/1Money-Co"
            >
              1Money Terms of Use
            </a>
            , 
            <a
              href="https://github.com/1Money-Co"
            >
              Privacy Policy
            </a>
            .
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="usd1-react-ui-checkbox-wrapper"
    >
      <div
        class="usd1-react-ui-checkbox-inner"
      >
        <div
          class="usd1-react-ui-checkbox-inner-checkbox p-checkbox p-component p-highlight"
          data-p-disabled="false"
          data-p-highlight="true"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-invalid="false"
            class="p-checkbox-input"
            data-pc-section="input"
            id="Agree"
            name="Agree"
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-disabled="false"
            data-p-highlight="true"
            data-pc-section="box"
          >
            <svg
              class="p-icon p-checkbox-icon"
              data-pc-section="icon"
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.86199 11.5948C4.78717 11.5923 4.71366 11.5745 4.64596 11.5426C4.57826 11.5107 4.51779 11.4652 4.46827 11.4091L0.753985 7.69483C0.683167 7.64891 0.623706 7.58751 0.580092 7.51525C0.536478 7.44299 0.509851 7.36177 0.502221 7.27771C0.49459 7.19366 0.506156 7.10897 0.536046 7.03004C0.565935 6.95111 0.613367 6.88 0.674759 6.82208C0.736151 6.76416 0.8099 6.72095 0.890436 6.69571C0.970973 6.67046 1.05619 6.66385 1.13966 6.67635C1.22313 6.68886 1.30266 6.72017 1.37226 6.76792C1.44186 6.81567 1.4997 6.8786 1.54141 6.95197L4.86199 10.2503L12.6397 2.49483C12.7444 2.42694 12.8689 2.39617 12.9932 2.40745C13.1174 2.41873 13.2343 2.47141 13.3251 2.55705C13.4159 2.64268 13.4753 2.75632 13.4938 2.87973C13.5123 3.00315 13.4888 3.1292 13.4271 3.23768L5.2557 11.4091C5.20618 11.4652 5.14571 11.5107 5.07801 11.5426C5.01031 11.5745 4.9368 11.5923 4.86199 11.5948Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <label
          for="Agree"
        >
          I am over 18 years old and I have read, understand and agree to the
          <a
            href="https://github.com/1Money-Co"
          >
            1Money Terms of Use
          </a>
          , 
          <a
            href="https://github.com/1Money-Co"
          >
            Privacy Policy
          </a>
          .
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Checkbox singleTristate renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="usd1-react-ui-checkbox-wrapper"
      >
        <div
          class="usd1-react-ui-checkbox-inner"
        >
          <div
            class="usd1-react-ui-checkbox-inner-checkbox p-tristatecheckbox p-checkbox p-component"
            data-p-disabled="false"
            data-pc-name="tristatecheckbox"
            data-pc-section="root"
            id="Status"
            inputid="Status"
            name="State"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              id="Status"
              type="checkbox"
              value=""
            />
            <span
              aria-live="polite"
              class="p-hidden-accessible"
              data-pc-section="sronlyaria"
            >
              Not Selected
            </span>
            <div
              aria-checked="false"
              class="p-checkbox-box"
              data-pc-section="box"
              role="checkbox"
              tabindex="0"
            />
          </div>
          <label
            for="Status"
          >
            Change State
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="usd1-react-ui-checkbox-wrapper"
    >
      <div
        class="usd1-react-ui-checkbox-inner"
      >
        <div
          class="usd1-react-ui-checkbox-inner-checkbox p-tristatecheckbox p-checkbox p-component"
          data-p-disabled="false"
          data-pc-name="tristatecheckbox"
          data-pc-section="root"
          id="Status"
          inputid="Status"
          name="State"
        >
          <input
            aria-invalid="false"
            class="p-checkbox-input"
            data-pc-section="input"
            id="Status"
            type="checkbox"
            value=""
          />
          <span
            aria-live="polite"
            class="p-hidden-accessible"
            data-pc-section="sronlyaria"
          >
            Not Selected
          </span>
          <div
            aria-checked="false"
            class="p-checkbox-box"
            data-pc-section="box"
            role="checkbox"
            tabindex="0"
          />
        </div>
        <label
          for="Status"
        >
          Change State
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
